figuring out styling

--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GT Sailing</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <div class="page">
+    <h1>GT Sailing School</h1>
+    <h1>ASA Certified</h1>
+    <nav id="desktop-nav">
+        <div>
+            <ul class="nav-links">
         <a href="index.html">Home</a>
         <a href="classes.html">Classes</a>
         <a href="offerings.html">Offerings</a>
@@ -15,10 +21,11 @@
         <a href="sales.html">Boat Sales</a>
         <a href="schedule.html">Schedule</a>
         <a href="things.html">Things We Like</a>
+    </ul>
+</div>
     </nav>
-    <div class="page">
-        <p>Hello World!</p>
-    </div>
+    
     <p>Hello World!</p>
+</div>
 </body>
 </html>
