worked on home page

--- a/classes.html
+++ b/classes.html
@@ -1,11 +1,16 @@
-<nav>
+<link rel="stylesheet" href="style.css">
+
+<nav id="desktop-nav" class="nav">
+    <div>
+        <ul>
     <a href="index.html">Home</a>
     <a href="classes.html">Classes</a>
     <a href="offerings.html">Offerings</a>
     <a href="gallery.html">Gallery</a>
     <a href="contact.html">Contact</a>
-    <a href="sales.html">Boat Sales</a>
+    <a href="sales.html">Meet the Crew</a>
     <a href="schedule.html">Schedule</a>
     <a href="things.html">Things We Like</a>
-</nav>
+</ul>
+</div>
 <p>Class Offerings</p>
