--- a/index.html
+++ b/index.html
@@ -8,24 +8,33 @@
 </head>
 <body>
     <div class="page">
-    <h1>GT Sailing School</h1>
-    <h1>ASA Certified</h1>
-    <nav id="desktop-nav">
         <div>
-            <ul class="nav-links">
+    <h1 class="header">GT Sailing School</h1>
+    <h2 class="header">ASA Certified</h1>
+    </div>
+    <nav id="desktop-nav" class="nav">
+        <div>
+            <ul>
         <a href="index.html">Home</a>
         <a href="classes.html">Classes</a>
         <a href="offerings.html">Offerings</a>
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
-        <a href="sales.html">Boat Sales</a>
+        <a href="sales.html">Meet the Crew</a>
         <a href="schedule.html">Schedule</a>
         <a href="things.html">Things We Like</a>
     </ul>
 </div>
     </nav>
     
-    <p>Hello World!</p>
+    <img src="./assets/index1.png" />
+    <img src="./assets/index2.png" />
+
+    <h3>About Us</h3>
+    <p>GT Sailing School was started in 2001 as an ASA (American Sailing Association) Sailing School in Holland Michigan by Captain Kim Grotenhuis. We sail and teach on Lake Macatawa and Lake Michigan. We are a family and group friendly sailing school, offering quality ASA certified sailing instruction. We offer professional sailing instruction for the beginner and those who need to update their skills.</p>
+    <p>Our instructors are ASA certified and Coast Guard licensed. We are certified to teach ASA 101-106 classes. (Basic Keel Boat, Basic Coastal Cruising, Bare Boat Cruising, Coastal Navigation and Advance Coastal Cruising) We have more than Thirty years of sailing experience as boat owners and crew and take pride in our sailing instruction.</p>
+    <p>Our boats are Coast Guard Inspected,certified and insured for Charter operation.</p>
+    <p>To date we have certified hundreds of sailors. We instruct individuals, couples and / or families and groups.</p>
 </div>
 </body>
 </html>
