--- a/crew.html
+++ b/crew.html
@@ -4,7 +4,7 @@
     <a href="offerings.html">Offerings</a>
     <a href="gallery.html">Gallery</a>
     <a href="contact.html">Contact</a>
-    <a href="sales.html">Boat Sales</a>
+    <a href="sales.html">Meet the Crew</a>
     <a href="schedule.html">Schedule</a>
     <a href="things.html">Things We Like</a>
 </nav>
